<resources>
    <string name="app_name">AllinWallet</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="welcome">Today is\u0020</string>
    <string name="categoriesbreakdown">"Categories Breakdown:</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">AllinWallet - Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="summary">Graph Summary</string>
    <string name="sharer">Share</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_signup">AllinWallet - Sign up</string>
    <string name="title_activity_main_page">Dashboard</string>
    <string name="title_activity_categories">Categories Information</string>
    <string name="title_activity_reset_password">AllinWallet - Reset password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="issue">Find a bug?</string>
    <string name="profile">Profile</string>
    <string name="report">Report</string>
    <string name="search">Search</string>
    <string name="btn_send">Send</string>
    <string name="btn_share">Share</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="prompt_password">Prompt password</string>
    <string name="plus">+</string>
    <string name="title_activity_add_purchase">Add Purchase</string>
    <string name="title_activity_edit_purchase">Edit Purchase</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_report">Report</string>
    <string name="action_example">Example action</string>
    <string name="dlt_account">Delete Account</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_by_name">Search_by_name</string>
    <string name="title_activity_search_by_category">Search_by_category</string>
    <string name="title_activity_searching">Search and Filter</string>
    <string name="report_default_spending_text">Your current spending:</string>
    <string name="report_default_budget_text">No budget found</string>
    <string name="report_default_remaining_budget_text">Go to the profile page and set a budget</string>
    <string name="report_remaining_budget_found">Your remaining budget:</string>
    <string name="title_activity_issue">Issue</string>
    <string name="add_purchase_menu_get_location">Get Location</string>
    <string name="add_purchase_menu_check_location">Check Location</string>
    <string name="add_purchase_menu_add_receipt">Add Receipt</string>
    <string name="add_purchase_menu_export_to_calendar">Export to Calendar</string>
    <string name="recurring_expense">Recurring Expense</string>
    <string name="recurring_expense_day">Recurring day:</string>
    <string name="recurring_expense_title">Expense title:</string>
    <string name="recurring_expense_amount">Expense amount:</string>
    <string name="choose_category">Choose a category:</string>
    <string name="purchase_date">Purchase date:</string>
    <string name="purchase_title">Purchase title:</string>
    <string name="purchase_amount">Purchase amount:</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="add">ADD</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="annual">Annual</string>
    <string name="europe_sign">EUR(€)</string>
    <string name="dollar_sign">USD($)</string>
    <string name="yuan_sign">CNY(¥)</string>
    <string name="issue_hint">Tell us about your issue</string>
    <string name="submit">submit</string>
    <string name="continue_btn">Continue</string>
    <string name="avatar_change">Change Avatar</string>
    <string name="budget">Set Budget</string>
    <string name="income">Set Income</string>
    <string name="currency_change">Set Currency</string>
    <string name="profile_theme_button_text">Choose Theme</string>
    <string name="profile_calendar_button_text">To Calendar</string>
    <string name="this_week">THIS WEEK</string>
    <string name="this_month">THIS MONTH</string>
    <string name="this_year">THIS YEAR</string>
    <string name="sort_by">Sort by</string>
    <string name="report_issue">Report the Issue</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="category_choose">Choose a category:</string>
    <string name="search_by_title">Search by title:</string>
    <string name="filter_by_category">Filter by category:</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="clear">CLEAR</string>
    <string name="upload">Upload</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="enter_image_name">Enter image name</string>
    <string name="default_num">N/A</string>
    <string name="main_page_default_spending_text">Spending</string>
    <string name="main_page_default_budget_text">Budget</string>
    <string name="main_page_default_income_text">Income</string>

    <string-array name="sort_array">
        <item>Date</item>
        <item>Category</item>
        <item>Title</item>
        <item>Amount</item>
    </string-array>

    <string-array name="category_array">
        <item>Any</item>
        <item>Grocery</item>
        <item>Clothes</item>
        <item>Housing</item>
        <item>Personal</item>
        <item>General</item>
        <item>Transport</item>
        <item>Fun</item>
    </string-array>
</resources>