<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/issue_menu"
        android:title="@string/title_activity_issue"
        app:showAsAction="never" />
    <item
        android:id="@+id/profile_menu"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/recurring_menu"
        android:title="@string/recurring_expense"
        app:showAsAction="never" />
    <item
        android:id="@+id/report_menu"
        android:title="@string/report"
        app:showAsAction="never" />
    <item
        android:id="@+id/graphVisual_menu"
        android:title="graphVisual"
        app:showAsAction="never" />
    <item
        android:id="@+id/search_menu"
        android:title="@string/search"
        app:showAsAction="never" />
    <item android:id="@+id/share_menu"
        android:title="@string/sharer"
        app:showAsAction="never" />
</menu>